# molmetrics

./: .gitignore  README.md  pyproject.toml  test.ipynb
examples/: qm9.ipynb
molecular_metrics/: __init__.py  bispectrum.py  datatypes.py  edm_analysis.py  metrics.py  mmd.py  molecules.py  posebusters.py
molecular_metrics/rdkit/: __init__.py  bond_angles.py  bond_lengths.py  local_environments.py  molecules.py  uniqueness.py
molmetrics/: __init__.py  bispectrum.py  datatypes.py  edm_analysis.py  metrics.py  molecules.py
molmetrics/openbabel/: validity.py
molmetrics/rdkit/: __init__.py  bond_angles.py  bond_lengths.py  io.py  local_environments.py  molecules.py  uniqueness.py  validity.py
tests/data/: dsgdb9nsd_044015.xyz  dsgdb9nsd_065112.xyz
tests/data/qm9/: README.md  dsgdb9nsd_001020.xyz
